--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-select": "^5.3.2",
     "react-toastify": "^9.0.3",
     "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.5",
+    "styled-theming": "^2.2.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
