--- a/back/package.json
+++ b/back/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "heroku-postbuild": "cd front && yarn && yarn build"
   },
   "author": "Kravtsov Yehor",
   "license": "MIT",
@@ -14,6 +15,7 @@
     "axios": "^0.27.2",
     "config": "^3.3.7",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.4.0"
   },
