--- a/back/package.json
+++ b/back/package.json
@@ -1,6 +1,10 @@
 {
   "name": "back",
   "version": "1.0.0",
+  "engines": {
+    "node": "16.x",
+    "yarn": "1.x"
+  },
   "description": "backend for countries-flags-app",
   "type": "module",
   "main": "index.js",
