--- a/back/front/package.json
+++ b/back/front/package.json
@@ -17,6 +17,7 @@
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.5",
     "styled-theming": "^2.2.0",
+    "util": "^0.12.4",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
