--- a/back/front/package.json
+++ b/back/front/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
     "axios": "^0.27.2",
+    "config": "^3.3.7",
     "path": "^0.12.7",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
