--- a/front/package.json
+++ b/front/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
     "axios": "^0.27.2",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
@@ -17,6 +19,7 @@
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.5",
     "styled-theming": "^2.2.0",
+    "util": "^0.12.4",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
