--- a/front/package.json
+++ b/front/package.json
@@ -2,6 +2,11 @@
   "name": "countries-flags-app",
   "version": "0.1.0",
   "private": true,
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
+  },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
     "axios": "^0.27.2",
