--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.4.0",
-    "got": "^11.8.5"
+    "got": ">=11.8.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.16",
-    "got": "^11.8.5"
+    "got": ">=11.8.5"
   }
 }
