--- a/front/package.json
+++ b/front/package.json
@@ -5,8 +5,6 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
     "axios": "^0.27.2",
-    "fs": "^0.0.1-security",
-    "path": "^0.12.7",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
@@ -19,8 +17,8 @@
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.5",
     "styled-theming": "^2.2.0",
-    "util": "^0.12.4",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "nth-check": ">=2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -59,6 +57,7 @@
     "postcss": "^8.4.13",
     "prettier": "^2.6.2",
     "stylelint": "^14.8.2",
-    "stylelint-order": "^5.0.0"
+    "stylelint-order": "^5.0.0",
+    "nth-check": ">=2.0.1"
   }
 }
