--- a/front/package.json
+++ b/front/package.json
@@ -2,9 +2,11 @@
   "name": "countries-flags-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://countries-flags-app.github.io",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
     "axios": "^0.27.2",
+    "nth-check": ">=2.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
@@ -17,8 +19,7 @@
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.5",
     "styled-theming": "^2.2.0",
-    "web-vitals": "^2.1.0",
-    "nth-check": ">=2.0.1"
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,7 +28,9 @@
     "eject": "react-scripts eject",
     "prettier": "prettier -w .",
     "lint": "eslint -c .eslintrc src --ext .js,.jsx,.ts,.tsx",
-    "lint:fix": "yarn lint --fix"
+    "lint:fix": "yarn lint --fix",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -54,10 +57,11 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
+    "gh-pages": "^4.0.0",
+    "nth-check": ">=2.0.1",
     "postcss": "^8.4.13",
     "prettier": "^2.6.2",
     "stylelint": "^14.8.2",
-    "stylelint-order": "^5.0.0",
-    "nth-check": ">=2.0.1"
+    "stylelint-order": "^5.0.0"
   }
 }
