--- a/front/package.json
+++ b/front/package.json
@@ -6,10 +6,10 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
     "axios": "^0.27.2",
+    "eslint-plugin-better-styled-components": "^1.1.2",
     "nth-check": ">=2.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-icons": "^4.3.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
