--- a/front/package.json
+++ b/front/package.json
@@ -9,12 +9,12 @@
     "eslint-plugin-better-styled-components": "^1.1.2",
     "nth-check": ">=2.0.1",
     "react": "^18.1.0",
+    "react-debounce-input": "^3.3.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.3.2",
-    "react-toastify": "^9.0.3",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.5",
